--- a/flat-color-kevin/main.css
+++ b/flat-color-kevin/main.css
@@ -1,13 +1,74 @@
 @import url('https://fonts.googleapis.com/css2?family=Tagesschrift&display=swap');
 
+body {
+    font-family: "Tagesschrift", sans-serif;
+    margin: 0;
+}
 
+div {
+    width: 400px;
+    height: 400px;
+    border: 1px solid #ccc;
+    margin: 10px;
+    text-align: center;
+    display: inline-block;
+}
 
+#red {
+    background-color: #FF0000;
+}
 
+#green {
+    background-color: #00FF00;
+}
 
+#blue {
+    background-color: #0000FF;
+}
 
-.tagesschrift-regular {
-    font-family: "Tagesschrift", system-ui;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
+#yellow {
+    background-color: #FFFF00;
+}
+
+#cyan {
+    background-color: #00FFFF;
+}
+
+#magenta {
+    background-color: #FF00FF;
+}
+
+#orange {
+    background-color: #FFA500;
+}
+
+#purple {
+    background-color: #800080;
+}
+
+#pink {
+    background-color: #FFC0CB;
+}
+
+#brown {
+    background-color: #A52A2A;
+}
+
+.nome_colore {
+    color: white;
+    font-family: "Tagesschrift", sans-serif;
+    font-size: 2em;
+    text-shadow: 2px 2px 4px #000000;
+    padding-top: 150px;
+    margin: 0;
+}
+
+.codice_colore {
+    color: #333;
+    background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.9em;
+    padding: 5px;
+    display: inline-block;
+    margin: 0;
+}
